--- a/final/package.json
+++ b/final/package.json
@@ -9,18 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.18",
     "expo": "~49.0.15",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-feather": "^1.1.2",
-    "react-native-maps": "^1.8.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-reanimated": "~3.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0"
+    "react-native-svg": "^13.9.0",
+    "splash-screen": "^4.0.1",
+    "expo-updates": "~0.18.17",
+    "expo-dev-client": "~2.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
