--- a/final/package.json
+++ b/final/package.json
@@ -12,9 +12,12 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.11",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -26,9 +29,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.9.0",
-    "splash-screen": "^4.0.1",
-    "expo-updates": "~0.18.17",
-    "expo-dev-client": "~2.4.11"
+    "react-redux": "^8.1.3",
+    "splash-screen": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
